Fix button z-index

--- a/cards-frontend/src/app/pages/oh-hell/oh-hell.component.scss
+++ b/cards-frontend/src/app/pages/oh-hell/oh-hell.component.scss
@@ -4,7 +4,7 @@
   position: absolute;
   inset: 20px;
   cursor: pointer;
-  z-index: 10000000000000;
+  z-index: 100000;
 }
 
 .confirm-text {
