--- a/cards-frontend/src/app/shared/components/bottom-bar/bottom-bar.component.scss
+++ b/cards-frontend/src/app/shared/components/bottom-bar/bottom-bar.component.scss
@@ -14,5 +14,5 @@
   align-items: center;
   cursor: pointer;
   -webkit-tap-highlight-color: transparent;
-  z-index: 10000000000000;
+  z-index: 100000;
 }
